Background images ignore View transform #67832

Closed
opened 2019-07-28 12:28:27 +02:00 by Sergey Sharybin · 19 comments

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-12.10.12

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-28 07:53, hash: 233f78c017
Worked: (optional)

Short description of error
View transform is ignored for both images and movie clips used as a background images in the viewport.

Ideally image will follow its "View as Render", and movie clip probably should just always respect view transform, similar to what's happening in the Clip Editor.

Exact steps for others to reproduce the error
Open attached file and see the difference between how texture on a cube is color managed and how is the background image is not.

Note that changes to color space might not be immediately visible in the viewport due to #66872 (which is a sepaarte root of the issue, and i'll fix that).

colorspace_example.blend

mango.exr

**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 655 Intel Inc. 4.1 INTEL-12.10.12 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-28 07:53, hash: `233f78c017` Worked: (optional) **Short description of error** View transform is ignored for both images and movie clips used as a background images in the viewport. Ideally image will follow its "View as Render", and movie clip probably should just always respect view transform, similar to what's happening in the Clip Editor. **Exact steps for others to reproduce the error** Open attached file and see the difference between how texture on a cube is color managed and how is the background image is not. Note that changes to color space might not be immediately visible in the viewport due to #66872 (which is a sepaarte root of the issue, and i'll fix that). [colorspace_example.blend](https://archive.blender.org/developer/F7633353/colorspace_example.blend) ![mango.exr](https://archive.blender.org/developer/F7633354/mango.exr)
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey

#76188 was marked as duplicate of this issue

#76188 was marked as duplicate of this issue
Brecht Van Lommel was assigned by Sergey Sharybin 2019-07-28 12:30:40 +02:00
Author
Owner

Added subscribers: @brecht, @sebastian_k

Added subscribers: @brecht, @sebastian_k
Author
Owner

@brecht, on a more technical note i've looked into gpu_texture_create_from_ibuf which is used by the background images, but it is not really clear to me how view transform fits there. Linearize the result of view transform, and apply sRGB transform in there? Or separate split the background image and make them always be in display space?

@brecht, on a more technical note i've looked into `gpu_texture_create_from_ibuf` which is used by the background images, but it is not really clear to me how view transform fits there. Linearize the result of view transform, and apply sRGB transform in there? Or separate split the background image and make them always be in display space?
Brecht Van Lommel removed their assignment 2019-08-02 13:52:18 +02:00
Sergey Sharybin was assigned by Brecht Van Lommel 2019-08-02 13:52:18 +02:00

As discussed, this is a consequence of the current design and similar to 2.7. Background images are drawn as overlays, and those are drawn without view transform.

The solution would probably be to either pre-transform the image on the CPU, or the change the overlay background image shader to optionally included a view transform. This would be based on the View as Render setting, with the goal of matching the image in the image editor and 3D viewport.

As discussed, this is a consequence of the current design and similar to 2.7. Background images are drawn as overlays, and those are drawn without view transform. The solution would probably be to either pre-transform the image on the CPU, or the change the overlay background image shader to optionally included a view transform. This would be based on the View as Render setting, with the goal of matching the image in the image editor and 3D viewport.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Wouldn't mind take a look on this task, after the #65347 (Unify overlay engines) that is currently in development. This task is somewhat related as it is hard to keep track of the loose changes.

Wouldn't mind take a look on this task, after the #65347 (Unify overlay engines) that is currently in development. This task is somewhat related as it is hard to keep track of the loose changes.
Author
Owner

@Jeroen-Bakker, be my guest to pick it up, you'll be more familiar with the draw manager thingamajig anyway :)

@Jeroen-Bakker, be my guest to pick it up, you'll be more familiar with the draw manager thingamajig anyway :)

Added subscriber: @lemenicier_julien

Added subscriber: @lemenicier_julien
Sergey Sharybin was unassigned by Dalai Felinto 2019-12-23 16:33:30 +01:00
Jeroen Bakker self-assigned this 2020-01-10 13:23:15 +01:00
Member

It is actually a todo as it wasn't designed this way.

It is actually a todo as it wasn't designed this way.

This is marked with the 2.82 milestone. If no fix is planned for that release, please move it to 2.83 or untag it from a specific milestone.

This is marked with the 2.82 milestone. If no fix is planned for that release, please move it to 2.83 or untag it from a specific milestone.

Ping, is this for 2.82 or not?

Ping, is this for 2.82 or not?
Member

Ow, was too busy with the tracker curfew. Will set it to 2.83. Change is isolated, but would not want to add this at the last moment.

Ow, was too busy with the tracker curfew. Will set it to 2.83. Change is isolated, but would not want to add this at the last moment.
Member

Users are reporting performance issues with large files. It is not sure this ticket will improve it, but we might want to check on it as it is most likely related to color management performance.
It could also be the case that the viewport color management improvements in b283 has reduced this. When the performance is still below expected we should create a new ticket to solve this.

Users are reporting performance issues with large files. It is not sure this ticket will improve it, but we might want to check on it as it is most likely related to color management performance. It could also be the case that the viewport color management improvements in b283 has reduced this. When the performance is still below expected we should create a new ticket to solve this.

Added subscriber: @fsiddi

Added subscriber: @fsiddi

Added subscriber: @Dogway

Added subscriber: @Dogway

Added subscriber: @Hartmut

Added subscriber: @Hartmut

This issue was referenced by 3ffa0452af

This issue was referenced by 3ffa0452af9ac0a08b321e9504c9e080ab1ce47d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67832
No description provided.